Login handlebars in progress, commit to merge with Conner's parents controllers

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="../../public/css/style.css">
 </head>
 <body>
-    <div class = "search-bar">
+    <nav>
+        <button>login</button>
+    </nav>
+    <main>
+        {{{ body }}}
+    </main>
+    {{!-- <div class = "search-bar">
         <input type="text" placeholder="Search">
     </div>
     <div class = "todays-date">
@@ -33,7 +39,7 @@
     </div>
     <div class="calendar">
         <p>Calendar</p>
-</div>
+</div> --}}
 
 </body>
 </html>
