--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,3 +9,30 @@
   <h1>{{parent.email}}</h1>
 </div>
 {{/each}}
+
+    <div class = "search-bar">
+        <input type="text" placeholder="Search">
+    </div>
+    <div class = "todays-date">
+       <p>Today's Date</p>
+    </div>
+    <div class = "request">
+        <button>
+            Request a Sitter!
+        </button>
+    </div>
+    <div class= "openings">
+        <button>New openings!</button>
+    </div>
+    <div class = "parents">
+       <p>Parents</p>
+    </div>
+    <div class = "children">
+       <p>Children</p>
+    </div>
+    <div class= "profile">
+        <button>Your Profile</button>
+    </div>
+    <div class="calendar">
+        <p>Calendar</p>
+</div>
