--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=|, initial-scale=1.0">
     <title>Project 2</title>
-    <link rel="stylesheet" href="../../public/css/style.css">
+     <link rel="stylesheet" href="/css/jass.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav>
