Fixed linking issue and partial login page functionality

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -39,4 +39,6 @@
   </div>
 </div>
 
-<script src="../public/js/login.js"></script>
+<button id="test-button">Hello</button>
+
+<script src="./js/login.js"></script>
