--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <button>login</button>
+        <button id="logout">login</button>
     </nav>
     <main>
         {{{ body }}}
@@ -43,6 +43,6 @@
 </div> --}}
 
 
-{{!-- <script src="../../public/js/login.js"></script> --}}
+<script src="/js/logout.js"></script>
 </body>
 </html>
