--- a/views/parent.handlebars
+++ b/views/parent.handlebars
@@ -1,10 +1,29 @@
-<h1>Parents</h1>
-<div>
-  <h1>{{parent.id}}</h1>
+<div class="row">
+  <div class="col-auto">
+    <h2>Welcome, {{parent.names}}!</h2>
+    <h2>Children:{{children.name}}</h2>
+  </div>
 </div>
-<div>
-  <h1>{{parent.names}}</h1>
-</div>
-<div>
-  <h1>{{parent.email}}</h1>
-</div>
+
+<div class="row mt-4">
+  <div class="col-md-6">
+    <h3>Create a new request:</h3>
+
+    <form class="form new-project-form">
+      <div class="form-group">
+        <label for="request-name">Request title:</label>
+        <input class="form-input" type="text" id="request-title" name="request-title" />
+      </div>
+      <div class="form-group">
+        <label for="request-date">Date for request:</label>
+        <input class="form-input" type="date" id="request-date" name="request-date" />
+      </div>
+      <div class="form-group">
+        <label for="request-comment">Comment:</label>
+        <textarea class="form-input" id="request-comment" name="request-comment"></textarea>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Create</button>
+      </div>
+    </form>
+  </div>
