Login route fixed with new model and profile handlebar linked

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-{{#each parents as |parent| }}
+{{!-- {{#each parents as |parent| }}
 <div>
   <h1>{{parent.id}}</h1>
 </div>
@@ -8,7 +8,7 @@
 <div>
   <h1>{{parent.email}}</h1>
 </div>
-{{/each}}
+{{/each}} --}}
 
     <div class = "search-bar">
         <input type="text" placeholder="Search">
