--- a/views/parent.handlebars
+++ b/views/parent.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{parent.names}}!</h2>
+    <h2>Welcome, {{names}}!</h2>
     <h2>Children:{{children.name}}</h2>
   </div>
 </div>
