--- a/views/parent.handlebars
+++ b/views/parent.handlebars
@@ -9,7 +9,7 @@
   <div class="col-md-6">
     <h3>Create a new request:</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-request-form">
       <div class="form-group">
         <label for="request-name">Request title:</label>
         <input class="form-input" type="text" id="request-title" name="request-title" />
@@ -27,3 +27,23 @@
       </div>
     </form>
   </div>
+    {{#if requests.length}}
+  <div class="col-md-6 request-list">
+    <h3>Current Requests:</h3>
+
+    {{#each requests as |request|}}
+    <div class="row mb-2">
+      <div class="col-md-8">
+        <h4><a href="/request/{{request.id}}">{{request.title}}</a></h4>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-sm btn-danger" data-id="{{request.id}}">DELETE</button>
+      </div>
+    </div>
+    {{/each}}
+  </div>
+    {{/if}}
+  </div>
+
+
+  <script src="./js/parent.js"></script>
