--- a/views/requests.handlebars
+++ b/views/requests.handlebars
@@ -1,6 +1,6 @@
-<div class="text-center">
+{{!-- <div class="text-center">
   <h2>{{date}}</h2>
-  <p>{{description}}</p>
+  <p>{{comment}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
     <span for="img" aria-label="money">💲</span>
@@ -10,4 +10,16 @@
   <p>
     <button class="btn btn-primary">Accept Babysitting Date?</button>
   </p>
+</div> --}}
+<h1>Requests</h1>
+{{!-- {{#each requests as |request| }}
+<div>
+  <h1>{{request.id}}</h1>
 </div>
+<div>
+  <h1>{{request.title}}</h1>
+</div>
+<div>
+  <h1>{{request.comment}}</h1>
+</div>
+{{/each}} --}}
