Added new child fx to parents profile page, home button to nav, and linked requests controller to request view

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,19 +10,20 @@
 </div>
 {{/each}} --}}
 
-    <div class = "search-bar">
+    {{!-- <div class = "search-bar">
         <input type="text" placeholder="Search">
-    </div>
-    <div class = "todays-date">
+    </div> --}}
+    {{!-- <div class = "todays-date">
        <p>Today's Date</p>
-    </div>
-    <div class = "request">
+    </div> --}}
+    {{!-- <div class = "request">
         <button>
             Request a Sitter!
         </button>
-    </div>
+    </div> --}}
     <div class= "openings">
-        <button>New openings!</button>
+        {{!-- <button>New openings!</button> --}}
+        <a href="/requests">View Requests</a>
     </div>
     <div class = "parents">
        <p>Parents</p>
@@ -30,9 +31,9 @@
     <div class = "children">
        <p>Children</p>
     </div>
-    <div class= "profile">
+    {{!-- <div class= "profile">
         <button>Your Profile</button>
-    </div>
+    </div> --}}
     <div class="calendar">
         <p>Calendar</p>
 </div>
