--- a/views/requests.handlebars
+++ b/views/requests.handlebars
@@ -12,7 +12,7 @@
   </p>
 </div> --}}
 <h1>Requests</h1>
-{{!-- {{#each requests as |request| }}
+{{#each requests as |request| }}
 <div>
   <h1>{{request.id}}</h1>
 </div>
@@ -22,4 +22,4 @@
 <div>
   <h1>{{request.comment}}</h1>
 </div>
-{{/each}} --}}
+{{/each}}
