--- a/views/parent.handlebars
+++ b/views/parent.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-auto">
     <h2>Welcome, {{names}}!</h2>
-    <h2>Children:{{children.name}}</h2>
+    {{!-- <h2>Children:{{children.name}}</h2> --}}
   </div>
 </div>
 
@@ -27,6 +27,21 @@
       </div>
     </form>
   </div>
+
+    <div class="col-md-6">
+    <h3>Add a Child:</h3>
+
+    <form class="form new-child-form">
+      <div class="form-group">
+        <label for="child-name">Child Name:</label>
+        <input class="form-input" type="text" id="child-name" name="child-name" />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Add</button>
+      </div>
+    </form>
+  </div>
+  
     {{#if requests.length}}
   <div class="col-md-6 request-list">
     <h3>Current Requests:</h3>
