--- a/views/requests.handlebars
+++ b/views/requests.handlebars
@@ -11,7 +11,7 @@
     <button class="btn btn-primary">Accept Babysitting Date?</button>
   </p>
 </div> --}}
-<h1>Requests</h1>
+{{!-- <h1>Requests</h1>
 {{#each requests as |request| }}
 <div>
   <h1>{{request.id}}</h1>
@@ -21,5 +21,16 @@
 </div>
 <div>
   <h1>{{request.comment}}</h1>
+</div>
+{{/each}} --}}
+{{#each requests as |request|}}
+<div class="text-center card">
+  <h2>{{request.title}}</h2>
+  <p>{{request.comment}}</p>
+  <p>Created by {{parent.names}}</p>
+  <p>{{request.date}}</p>
+  <p>
+    <button class="btn btn-primary">Accept this request</button>
+  </p>
 </div>
 {{/each}}
