Change to homepages

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,19 +21,19 @@
             Request a Sitter!
         </button>
     </div> --}}
-    <div class= "openings">
+    <div class= "btn btn-primary">
         {{!-- <button>New openings!</button> --}}
         <a href="/requests">View Requests</a>
     </div>
-    <div class = "parents">
+    {{!-- <div class = "parents">
        <p>Parents</p>
     </div>
     <div class = "children">
        <p>Children</p>
-    </div>
+    </div> --}}
     {{!-- <div class= "profile">
         <button>Your Profile</button>
     </div> --}}
-    <div class="calendar">
-        <p>Calendar</p>
-</div>
+    {{!-- <div class="calendar">
+    <p>Calendar</p>
+</div> --}}
