--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,55 +1,29 @@
-.request {
-    position:absolute;
-    top: 80px;
-    right: 50px;
-    font-size: 24px;
-    cursor: pointer;
-}
-.profile {
-    position:absolute;
-    top: 10px;
-    right: 50px;
-    cursor: pointer;
+body {
+  background-color: #f7ede2 ;
 }
 
-.openings {
-    position:absolute;
-    top:80px;
-    cursor: pointer;
+img {
+  max-width: 100%;
+  height: auto;
 }
-.parents {
-  width: 100px;
-  height: 300px;
-  border: 5px solid green;
-  padding: 50px;
-  margin: 20px;
-  position: absolute;
-  top: 120px;
-  text-align: center;
 
+.navbar {
+  background-color: #84a59d;
+  height: 60%;
+  line-height: 60%;
+}
 
+.container {
+  margin-left: 5%;
+  margin-right: 5%;
 }
-.children {
-  width: 100px;
-  height: 300px;
-  border: 5px solid green;
-  padding: 50px;
-  margin: 20px;
-  position: absolute;
-  top: 120px;
-  right: 50px;
-  text-align: center;
-  
+
+.nav {
+  display: inline;
+  list-style-type: none;
 }
-.calendar {
-  width: 300px;
-  border: 5px solid green;
-  padding: 50px;
-  margin: auto;
-  text-align: center;
-  bottom: 90px;
+
+.nav li {
+  display: inline;
 }
-.todays-date {
-    margin: auto;
-    top: 90px;
-}
+
