--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,39 +1,13 @@
-{{!-- {{#each parents as |parent| }}
-<div>
-  <h1>{{parent.id}}</h1>
-</div>
-<div>
-  <h1>{{parent.names}}</h1>
-</div>
-<div>
-  <h1>{{parent.email}}</h1>
-</div>
-{{/each}} --}}
 
-    {{!-- <div class = "search-bar">
-        <input type="text" placeholder="Search">
-    </div> --}}
-    {{!-- <div class = "todays-date">
-       <p>Today's Date</p>
-    </div> --}}
-    {{!-- <div class = "request">
-        <button>
-            Request a Sitter!
-        </button>
-    </div> --}}
-    <div class= "btn btn-primary">
-        {{!-- <button>New openings!</button> --}}
-        <a href="/requests">View Requests</a>
+
+    <div class="container text-center">
+  <div class="row">
+    <div class="col">
     </div>
-    {{!-- <div class = "parents">
-       <p>Parents</p>
+    <div class="col">
+      <img src="/images/stroller-2798183_1280.png" class="rounded mx-auto d-block" alt="kitten in a stroller">
     </div>
-    <div class = "children">
-       <p>Children</p>
-    </div> --}}
-    {{!-- <div class= "profile">
-        <button>Your Profile</button>
-    </div> --}}
-    {{!-- <div class="calendar">
-    <p>Calendar</p>
-</div> --}}
+    <div class="col">
+    </div>
+  </div>
+</div>
