--- a/views/parent.handlebars
+++ b/views/parent.handlebars
@@ -1,12 +1,9 @@
 <div class="row">
   <div class="col-auto">
     <h2>Welcome, {{names}}!</h2>
-    {{!-- <h2>Children:{{children.name}}</h2> --}}
+    <h2>Children:{{children.name}}</h2>
   </div>
 </div>
-
-
-
 
 <div class="row mt-4">
   <div class="col-md-6">
