Cleaned up a bit, added more styling, added families page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
+        <h1>Your Village</h1>
         <div class="container">
             <ul class="nav">
                 {{#if logged_in}}
@@ -20,6 +21,7 @@
                 <li><a class="btn btn-primary" href="/login">Login</a></li> 
                 {{/if}}   
                 <li><a class="btn btn-primary" href="/requests">View Requests</a></li>    
+                <li><a class="btn btn-primary" href="/families">View Families</a></li>  
             </ul>        
         </div>
     </nav>
