--- a/views/parent.handlebars
+++ b/views/parent.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-auto">
     <h2>Welcome, {{names}}!</h2>
-    <h2>Children:{{children.name}}</h2>
+    {{!-- <h2>Children:{{children.name}}</h2> --}}
   </div>
 </div>
 
@@ -42,7 +42,7 @@
     </form>
   </div>
   
-    {{#if requests.length}}
+    {{!-- {{#if requests.length}}
   <div class="col-md-6 request-list">
     <h3>Current Requests:</h3>
 
@@ -57,7 +57,7 @@
     </div>
     {{/each}}
   </div>
-    {{/if}}
+    {{/if}} --}}
   </div>
 
 
